Fixed icon uris broken in browser shim removal.  bug=328543 r=ben@mozilla.org

--- a/mozilla/browser/themes/pinstripe/browser/browser.css
+++ b/mozilla/browser/themes/pinstripe/browser/browser.css
@@ -909,8 +909,7 @@ browsermessage {
 }
 
 #places-bookmark {
-  list-style-image: url("chrome://browser/skin/bookmarks/Bookmarks-toolbar.png");
-  -moz-image-region: rect(0px 24px 24px 0px);
+  list-style-image: url("chrome://browser/skin/places/bookmarksToolbar.png");
 }
 
 #places-subscribe {
@@ -923,7 +922,7 @@ browsermessage {
 }
 
 #bookmarksBarShowPlaces {
-  list-style-image: url("chrome://browser/skin/places/places-icon.png");
+  list-style-image: url("chrome://browser/skin/places/placesIcon.png");
 }
 
 /* Personal toolbar */
